<resources>
    <string name="app_name">Mosam</string>
    <string name="current_temprature">25</string>
    <string name="Day_monday">MON</string>
    <string name="max_temp_second">20</string>
    <string name="min_temp_second">15</string>
    <string name="humidity_percent">21%</string>
    <string name="rain_mm">0 mm</string>
    <string name="wind_kmperh">11.1 km/h</string>
    <string name="today_day">MONDAY , MARCH 29</string>
    <string name="temp_time"> 4:00</string>
    <string name="temp_time_temp">37</string>
    <string name="temp_time_percent">0%</string>
    <string name="temp_time_wind">5.6 km/h</string>
    <string name="Realfeel">RealFeel</string>
    <string name="clear">CLEAR</string>
    <string name="LOCATION_KEY">mylocation</string>
    <string name="title_location">Location</string>
    <string name="defalult_place">Delhi</string>
    <string name="settings">Settings</string>

    <string name="temprature">Temprature Uints</string>
    <!--    Array list temp unit String-->
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="CELSIUS">Celsius</string>
</resources>