<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/hour_inage_status"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_cloud"
        app:layout_constraintBottom_toBottomOf="@+id/hour_time"
        app:layout_constraintEnd_toStartOf="@+id/hour_temp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hour_time"
        app:layout_constraintTop_toTopOf="@+id/hour_time" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hour_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_time"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/hour_inage_status"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hour_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_time_percent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hour_time"
        app:layout_constraintEnd_toStartOf="@+id/hour_wind"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hour_temp"
        app:layout_constraintTop_toTopOf="@+id/hour_time" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hour_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_time_wind"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hour_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hour_percent"
        app:layout_constraintTop_toTopOf="@+id/hour_time" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/hour_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_time_temp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hour_time"
        app:layout_constraintEnd_toStartOf="@+id/hour_percent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hour_inage_status"
        app:layout_constraintTop_toTopOf="@+id/hour_time" />


</androidx.constraintlayout.widget.ConstraintLayout>