<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--  i will change this to a custom layout using a TODO seclector-->

    <Button
        android:id="@+id/wind_button"
        android:textSize="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_fan"
        android:text="@string/wind_kmperh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/humidity_buttion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/humidity_buttion"
        android:textSize="10dp"

        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_thermometer"
        android:text="@string/humidity_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rain_button_mm"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wind_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rain_button_mm"
        android:textSize="10dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:drawableTop="@drawable/ic_drop"
        android:text="@string/rain_mm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/humidity_buttion"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

