<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:background="#2196f3"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_buildings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_temp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_buildings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_temp" />

        <ImageView
            android:id="@+id/weather_status_image"
            android:layout_width="56dp"
            android:layout_height="60dp"
            android:layout_marginEnd="36dp"
            android:src="@drawable/ic_sun"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/current_temp"
            app:layout_constraintTop_toTopOf="@+id/current_temp"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/current_temprature"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/max_temp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/current_temp"
            tools:text="@string/current_temprature" />

        <TextView
            android:id="@+id/min_temp"
            android:textColor="@color/dull_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@+id/current_temp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:text="@string/current_temprature" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/current_temp"
            app:layout_constraintStart_toEndOf="@+id/current_temp"
            app:layout_constraintTop_toTopOf="@+id/current_temp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/description"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/clear"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/real_feel"
            app:layout_constraintStart_toStartOf="@+id/real_feel" />

        <TextView
            android:id="@+id/real_feel"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:textSize="15sp"
            android:text="@string/Realfeel"
            app:layout_constraintEnd_toEndOf="@+id/min_temp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/current_temp"
            app:layout_constraintTop_toBottomOf="@+id/current_temp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>